--- a/bayesian_posterior_demo.ipynb
+++ b/bayesian_posterior_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "f632e425-0a41-430a-bbf6-a44e052d6b83",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bede68d002d646018e2e0120fec86b89",
+       "model_id": "f37fe189050b4d2da6fe9f080276a9ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -19,9 +19,8 @@
        "interactive(children=(IntSlider(value=1, description='Data Points:', max=900, min=1), Output()), _dom_classes=…"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -31,32 +30,46 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "\n",
+    "\n",
     "# True probability of heads (unknown to us)\n",
     "true_p = 0.7\n",
     "\n",
     "# Initial prior distribution (very off)\n",
-    "prior_a, prior_b = 1, 9\n",
+    "prior_a, prior_b = 2, 11\n",
     "\n",
     "# Generate data: 1 represents heads, 0 represents tails\n",
     "np.random.seed(42)\n",
     "data = np.random.binomial(1, true_p, 900)\n",
     "\n",
     "# Function to plot the distribution\n",
-    "def plot_distribution(a, b, label, color):\n",
+    "def plot_distribution(a, b, label, color, linestyle='-'):\n",
     "    x = np.linspace(0, 1, 900)\n",
     "    y = beta.pdf(x, a, b)\n",
-    "    plt.plot(x, y, label=label, color=color)\n",
+    "    plt.plot(x, y, label=label, color=color, linestyle=linestyle)\n",
     "\n",
     "# Interactive plot function\n",
     "def update_plot(n):\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    plot_distribution(prior_a, prior_b, 'Prior (Beta(1, 9))', 'blue')\n",
-    "\n",
-    "    posterior_a = prior_a + data[:n].sum()\n",
-    "    posterior_b = prior_b + n - data[:n].sum()\n",
-    "    plot_distribution(posterior_a, posterior_b, f'Posterior after {n} data points', 'green')\n",
-    "\n",
-    "    plt.axvline(true_p, color='black', linestyle='--', label='True $p$ = 0.7')\n",
+    "    \n",
+    "    # Plot prior\n",
+    "    plot_distribution(prior_a, prior_b, 'Prior (Beta(2, 11))', 'red')\n",
+    "    \n",
+    "    # Calculate and plot likelihood\n",
+    "    n_heads = data[:n].sum()\n",
+    "    n_tails = n - n_heads\n",
+    "    likelihood_x = np.linspace(0, 1, 900)\n",
+    "    likelihood_y = likelihood_x**n_heads * (1 - likelihood_x)**n_tails\n",
+    "    likelihood_y /= np.trapz(likelihood_y, likelihood_x)  # Normalize the likelihood\n",
+    "    plt.plot(likelihood_x, likelihood_y, label=f'Likelihood after {n} data points', color='blue', linestyle='--')\n",
+    "    \n",
+    "    # Update and plot posterior\n",
+    "    posterior_a = prior_a + n_heads\n",
+    "    posterior_b = prior_b + n_tails\n",
+    "    plot_distribution(posterior_a, posterior_b, f'Posterior after {n} data points', 'black')\n",
+    "    \n",
+    "    # True probability line\n",
+    "    plt.axvline(true_p, color='gold', linestyle='--', label='True $p$ = 0.7')\n",
+    "    \n",
     "    plt.xlabel('$p$')\n",
     "    plt.ylabel('Density')\n",
     "    plt.title('Bayesian Updating with Increasing Data')\n",
@@ -64,9 +77,9 @@
     "    plt.show()\n",
     "\n",
     "# Create the interactive widget\n",
-    "n_slider = widgets.IntSlider(value=1, min=1, max=900\n",
-    "                             , step=1, description='Data Points:')\n",
-    "widgets.interactive(update_plot, n=n_slider)"
+    "n_slider = widgets.IntSlider(value=1, min=1, max=900, step=1, description='Data Points:')\n",
+    "interactive_plot = widgets.interactive(update_plot, n=n_slider)\n",
+    "display(interactive_plot)"
    ]
   },
   {
